--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -6,7 +6,7 @@ on:
     tags:
       - '*'
   schedule:
-    - cron: '0 4 * * 6'
+    - cron: '0 4 * * *'
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
@@ -35,3 +35,11 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Unittesting
         run: python -m unittest ws_sdk/tests/test_web.py
+      - name: Push to Docker Hub
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: docker/build-push-action@v1
+        with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
+            repository: whitesourcetools
+            tag_with_ref: true
