--- a/.github/workflows/ci-non-master.yml
+++ b/.github/workflows/ci-non-master.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6]
     steps:
       - uses: actions/checkout@v2
       - uses: UnicornGlobal/trufflehog-actions-scan@master
@@ -46,8 +46,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
       - name: Build and push to DockerHub
         id: docker_build
         uses: docker/build-push-action@v2
