--- a/.github/workflows/ci-non-master.yml
+++ b/.github/workflows/ci-non-master.yml
@@ -33,14 +33,15 @@ jobs:
       - name: Unittesting
         run: python -m unittest
       - name: Prepare tag
+        id: prep
         run: |
           DOCKER_IMAGE=whitesourcetools/ws4s
-          VERSION=test
+          VERSION=latest
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/v}
           fi
           TAGS="${DOCKER_IMAGE}:${VERSION}"
-          echo ::set-output name=tags::${TAGS}
+          echo ::set-output name=tags::whitesourcetools/ws4s:latest
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
@@ -52,8 +53,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          repository: whitesourcetools/ws4s
           push: true
-          tags: whitesourcetools/ws4s:latest
+          tags: ${{ steps.prep.outputs.tags }}
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
