--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -34,12 +34,35 @@ jobs:
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Unittesting
-        run: python -m unittest ws_sdk/tests/test_web.py
-      - name: Push to Docker Hub
+        run: python -m unittest
+      - name: Prepare tag
         if: startsWith(github.ref, 'refs/tags/v')
-        uses: docker/build-push-action@v1
+        id: prep
+        run: |
+          DOCKER_IMAGE=whitesourcetools/ws4s
+          VERSION=latest
+          TAGS="${DOCKER_IMAGE}:${VERSION}"
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/v}
+            TAGS="$TAGS,${DOCKER_IMAGE}:${VERSION}"
+          fi
+          echo ::set-output name=tags::${TAGS}
+      - name: Set up Docker Buildx
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: docker/login-action@v1
         with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
-            repository: whitesourcetools
-            tag_with_ref: true
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and push to DockerHub
+        if: startsWith(github.ref, 'refs/tags/v')
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ steps.prep.outputs.tags }}
+      - name: Image digest
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: echo ${{ steps.docker_build.outputs.digest }}
