--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -34,7 +34,7 @@ jobs:
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Unittesting
-        run: python -m unittest ws_sdk/tests/test_web.py
+        run: python -m unittest
       - name: Prepare tag
         if: startsWith(github.ref, 'refs/tags/v')
         id: prep
