--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -39,4 +39,5 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: whitesourcetools/ws4s
+          readme-filepath: ./ws-slack/README.md
           short-description: ${{ github.event.repository.description }}
