--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -31,5 +31,11 @@ jobs:
         with:
           push: true
           tags: ${{ steps.prep.outputs.tags }}
+      - name: Update repo description
+        uses: peter-evans/dockerhub-description@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: whitesourcetools/ws4s
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
