--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-uvicorn==0.14.0
-fastapi~=0.65.1
-slack_sdk==3.7.0
-slack-bolt~=1.6.0
-ws-sdk==0.3.2
+uvicorn==0.15.0
+fastapi==0.68.1
+slack_sdk==3.9.1
+slack-bolt==1.8.0
+ws-sdk==0.5.1
 pydantic~=1.8.2
